2021-12-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * coders/jp2.c (realloc_rlm): JasPer wants its custom memory
        allocators to return non-null for a zero-sized request.  Make it
        so for the 'realloc' case as well.

        * coders/mat.c (ReadMATImageV4): Change 'ldblk' to size_t and
        check related calculations for overflow and to avoid possible
        negative seek offsets.

2021-12-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * magick/signature.c: Remove functions FinalizeSignature,
        GetSignatureInfo, TransformSignature, UpdateSignature and other
        private implementation details from signature.h.  Use managed
        memory allocator.

        * coders/png.c (DestroyJNG): Deallocate alpha_image temporary file in DestroyJNG().
        (ReadOnePNGImage): If setjmp fires, then don't return a broken
        image.

2021-12-18  Fojtik Jaroslav  <JaFojtik@yandex.com>

        * magick/wpg.c: Fix incorrect TrX and TrY elements in CTM.
        Backported from WP2LaTeX: https://hg.osdn.net/view/wp2latex/wp2latex/rev/ce47149e7e67

2021-12-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * utilities/tests/convert.tap: Use sed to count file lines rather
        than wc since wc output is inconsistent.  Fixes SourceForge issue
        #657 "Convert test fails in 1.3.37".

        * configure.ac: Search for a GnuPG 'gpg' program.

        * Makefile.am (snapshot): Add support for PGP-signed snapshots.

        * www/download.rst: Add documentation for how to validate
        downloaded files.

2021-12-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * version.sh: Update shared library versioning information for
        forthcoming 1.3.37 release.

        * scripts/graphicsmagick_snapshot_copy-ssh: Sample
        graphicsmagick_snapshot_copy script which uses scp to copy
        snapshot files to a directory at a remote host, and then rsync