@@ -2,7 +2,8 @@
 
         * coders/jp2.c (realloc_rlm): JasPer wants its custom memory
         allocators to return non-null for a zero-sized request.  Make it
-        so for the 'realloc' case as well.
+        so for the 'realloc' case as well.  Development JasPer 3.0.0
+        jas_initialize() is not yet ready for our purposes.
 
         * coders/mat.c (ReadMATImageV4): Change 'ldblk' to size_t and
         check related calculations for overflow and to avoid possible
